--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,7 +3,7 @@
     pager = true
 [core]
     excludesFile = ~/.gitignore
-    editor = vim
+    editor = nvim
     autocrlf = false
     fscache = true
     whitespace = 'tabwidth=4'
