Switch tmux prefix to C-Space to prevent conflict
Switch tmux prefix to C-Space to prevent conflict with start of line
keybind C-a.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,8 +2,8 @@
 
 # Set prefix to space.
 unbind-key C-b
-set-option -g prefix C-a
-#set-option -g prefix C-Space
+#set-option -g prefix C-a
+set-option -g prefix C-Space
 
 # Enable mouse support.
 #
@@ -105,9 +105,9 @@ unbind-key Up
 bind-key -r Up resize-pane -U 5
 
 # Fast toggle between current and last-used window (normally `prefix-l`).
-bind-key ^A last-window
+bind-key ^space last-window
 
-# `prefix C-a` is awfully close to the destructive `prefix space`, which
+# `prefix ^space` is awfully close to the destructive `prefix space`, which
 # trashes the layout. Providea quick way to get back to the previous-used
 # layout.
 #
