Rebind tmux prefix key to avoid vim conflict
Rebind tmux prefix key to Ctrl-\ to avoid conflict with vim autocomplete
key Ctrl-Space.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,8 @@
-# {{{ Options
+# Options {{{
 
-# Set prefix to space.
+# Set prefix to backslash.
 unbind-key C-b
-#set-option -g prefix C-a
-set-option -g prefix C-Space
+set-option -g prefix 'C-\'
 
 # Enable mouse support.
 #
@@ -57,7 +56,7 @@ set-option -ga word-separators :
 
 # }}}
 
-# {{{ Status Bar
+# Status Bar {{{
 
 set-option -g status on
 set-option -g status-style 'bg=#373b41,fg=white,bold,italics'
@@ -68,19 +67,20 @@ set-option -g status-interval 15 # Update interval (default 15).
 
 # }}}
 
-# {{{ Command Line
+# Command Line {{{
 
 set-option -g message-style 'bg=#373b41,fg=white'
 
 # }}}
 
-# {{{ Bindings
+# Bindings {{{
 
 # Open new/split panes with the path of the current pane.
 unbind-key c
 bind-key c new-window -c '#{pane_current_path}'
 unbind-key %
-bind-key % split-window -h -c '#{pane_current_path}'
+# Use '£' instead of '%', since it's next to '"'.
+bind-key £ split-window -h -c '#{pane_current_path}'
 unbind-key '"'
 bind-key '"' split-window -v -c '#{pane_current_path}'
 
@@ -105,22 +105,14 @@ unbind-key Up
 bind-key -r Up resize-pane -U 5
 
 # Fast toggle between current and last-used window (normally `prefix-l`).
-bind-key ^space last-window
-
-# `prefix ^space` is awfully close to the destructive `prefix space`, which
-# trashes the layout. Providea quick way to get back to the previous-used
-# layout.
-#
-# Normally used for previous-window, but I never use that, prefering numeric
-# access.
-bind-key p select-layout -o
+bind-key C-Space last-window
 
 # Intuitive window-splitting keys.
 bind-key | split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
 bind-key \ split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
 bind-key - split-window -v -c '#{pane_current_path}' # Normally `prefix-"`.
 
-# Analagous with naked C-l which resets/clears the terminal.
+# Analagous with naked C-l which clears the terminal.
 bind-key C-l clear-history
 
 # }}}
