--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,33 +1,33 @@
 [color]
-    ui = auto
-    pager = true
+	ui = auto
+	pager = true
 [core]
-    excludesFile = ~/.gitignore
-    autocrlf = false
-    fscache = true
-    whitespace = 'tabwidth=4'
+	excludesFile = ~/.gitignore
+	autocrlf = false
+	fscache = true
+	whitespace = 'tabwidth=4'
 [help]
-    autoCorrect = 50
+	autoCorrect = 50
 [push]
-    default = simple
+	default = simple
 [user]
-    signingKey = 5283B069B646BDF63B6C0C27F03278A61EEDB2CA
-    name = James Whaley
-    email = juicy66173@gmail.com
+	signingKey = 5283B069B646BDF63B6C0C27F03278A61EEDB2CA
+	name = James Whaley
+	email = juicy66173@gmail.com
 [commit]
-    gpgSign = true
+	gpgSign = true
 [tag]
-    forceSignAnnotated = true
+	forceSignAnnotated = true
 [gpg]
-    program = gpg2
-[credential]
-    helper = pass-git-helper
+	program = gpg2
+[include]
+	path = ~/.gitconfig.local
 [diff "pdf"]
-    binary = true
-    textconv = sh -c 'pdftotext -enc "UTF-8" -layout "$@" -'
+	binary = true
+	textconv = sh -c 'pdftotext -enc "UTF-8" -layout "$@" -'
 [diff "doc"]
-    binary = true
-    textconv = catdoc
+	binary = true
+	textconv = catdoc
 [diff "odf"]
-    binary = true
-    textconv = odt2txt
+	binary = true
+	textconv = odt2txt
