tmux: Update tmux config to fit the OneDark theme
Cleaned up tmux config and updated it to fit the OneDark theme.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,119 +1,133 @@
-# Options {{{
+# General {{{
 
-# Set prefix to backslash.
-unbind-key C-b
-set-option -g prefix 'C-\'
+  # Enable 256 colour support.
+  set -g default-terminal "tmux-256color"
+  set -ag terminal-overrides ',xterm-256color:Tc'
 
-# Enable mouse support.
-#
-# Mouse can be used to select panes, select windows (on the status bar) and
-# resize panes.
-set-option -g mouse on
+  # Don't wait for escape sequences after seeing `Ctrl+\`.
+  set -s escape-time 10
 
-# Slighty more usefful width in "main-vertical" layout.
-set-option -w -g main-pane-width 85
+  # Enable focus events.
+  set -g focus-events on
 
-# Automatically renumber windows on closing a pane.
-set-option -w -g renumber-windows on
-# Start window and pane numbering from 1.
-set-option -g base-index 1
-set-option -g pane-base-index 1
+  # Enable mouse support.
+  #
+  # Mouse can be used to select panes, select windows (on the status bar) and
+  # resize panes.
+  set -g mouse on
 
-# Enable xterm keys.
-set-option -w -g xterm-keys on
+  # Enable xterm keys.
+  setw -g xterm-keys on
 
-# Don't wait for escape sequences after seeing C-Space.
-set-option -s escape-time 0
+  # Set history size limit.
+  set -g history-limit 4096
 
-# Enable 256 colour support.
-#set-option -g default-terminal "screen-256color"
-set-option -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ',xterm-256color:Tc'
+  # Add ':' to the default list (' -_@') of word separators.
+  set -ag word-separators :
 
-# Set history size limit.
-set-option -g history-limit 4096
+# }}}
 
-# Update tab and window titles.
-set-option -g set-titles on
-set-option -g set-titles-string "#S > #T"
+# {{{ Windows
 
-set-option -g focus-events on
+  setw -g alternate-screen on   # Allow programs to use alternate screen.
 
-# Don't change tmux's own window titles.
-set-option -w -g automatic-rename off
+  setw -g allow-rename on       # Allow programs to change window title.
+  setw -g automatic-rename off  # Don't manage window titles.
 
-# Highlight active window on status bar.
-set-option -g window-status-current-style 'fg=red'
+  set -g renumber-windows on    # Automatically renumber windows.
+  set -g base-index 1           # Number windows starting at 1.
+  setw -g pane-base-index 1     # Number panes starting at 1.
 
-# Show bells in window titles.
-set-option -g window-status-bell-style 'fg=yellow,bold,underscore'
+  set -g set-titles on          # Set terminal title.
+  set -g set-titles-string "#S > #T"
 
-# Turn off border highlight.
-set-option -ga pane-active-border-style 'bg=default,fg=default'
+  # Appearance {{{
 
-# Add : to the default list (" -_@") of word separators.
-set-option -ga word-separators :
+    setw -g window-style 'bg=default,fg=default'
+    setw -g window-active-style 'bg=default,fg=default'
+
+    # Panes
+    setw -g pane-border-style 'fg=brightblack'
+    setw -g pane-active-border-style 'fg=brightblack'
+
+  # }}}
 
 # }}}
 
 # Status Bar {{{
 
-set-option -g status on
-set-option -g status-style 'bg=#373b41,fg=white,bold,italics'
-set-option -g status-left-length 40
-set-option -g status-left '#[fg=yellow,bold,italics]#S #{?client_prefix,#[fg=#ffff00],}§ '
-set-option -g status-right "#[fg=yellow,bold,italics]$USER@#h #[fg=magenta]%H:%M"
-set-option -g status-interval 15 # Update interval (default 15).
+  set -g status on
+  set -g status-interval 15
 
-# }}}
+  set -g status-style 'bg=#21252b,fg=white'
 
-# Command Line {{{
+  # Status left.
+  set -g status-left '#[bg=#{?client_prefix,magenta,green},fg=black] #S #[bg=default,fg=default] '
+  set -g status-left-length 20
 
-set-option -g message-style 'bg=#373b41,fg=white'
+  # Status right.
+  set -g status-right "#[bg=colour8,fg=white] $USER@#h #[bg=#{?client_prefix,magenta,green},fg=black] %H:%M | %d/%m/%Y "
+
+  # Windows on status bar.
+  setw -g window-status-separator ' '
+  setw -g window-status-style 'bg=brightblack,fg=default'
+  setw -g window-status-current-style 'bg=white,fg=black'
+
+  # Commands.
+  set -g message-style 'bg=#21252b,fg=white'
+  set -g message-command-style 'bg=#21252b,fg=magenta'
 
 # }}}
 
 # Bindings {{{
 
-# Open new/split panes with the path of the current pane.
-unbind-key c
-bind-key c new-window -c '#{pane_current_path}'
-unbind-key %
-# Use '£' instead of '%', since it's next to '"'.
-bind-key £ split-window -h -c '#{pane_current_path}'
-unbind-key '"'
-bind-key '"' split-window -v -c '#{pane_current_path}'
+  # Set prefix to `Ctrl+\`.
+  unbind C-b
+  set-option -g prefix 'C-\'
 
-# Vim-like key bindings for pane navigation (default uses cursor keys).
-unbind-key h
-bind-key h select-pane -L
-unbind-key j
-bind-key j select-pane -D
-unbind-key k
-bind-key k select-pane -U
-unbind-key l # Normally used for last-window.
-bind-key l select-pane -R
+  # Reload config from file.
+  unbind r
+  bind r source-file ~/.tmux.conf \; display-message 'Config reloaded'
 
-# Resizing (mouse also works).
-unbind-key Left
-bind-key -r Left resize-pane -L 5
-unbind-key Right
-bind-key -r Right resize-pane -R 5
-unbind-key Down
-bind-key -r Down resize-pane -D 5
-unbind-key Up
-bind-key -r Up resize-pane -U 5
+  # Open new/split panes with the path of the current pane.
+  unbind c
+  bind c new-window -c '#{pane_current_path}'
+  unbind %
+  # Use '£' instead of '%', since it's next to '"'.
+  bind £ split-window -h -c '#{pane_current_path}'
+  unbind '"'
+  bind '"' split-window -v -c '#{pane_current_path}'
 
-# Fast toggle between current and last-used window (normally `prefix-l`).
-bind-key C-Space last-window
+  # Vim-like key bindings for pane navigation (default uses cursor keys).
+  unbind h
+  bind h select-pane -L
+  unbind j
+  bind j select-pane -D
+  unbind k
+  bind k select-pane -U
+  unbind l # Normally used for last-window.
+  bind l select-pane -R
 
-# Intuitive window-splitting keys.
-bind-key | split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
-bind-key \ split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
-bind-key - split-window -v -c '#{pane_current_path}' # Normally `prefix-"`.
+  # Resizing (mouse also works).
+  unbind Left
+  bind -r Left resize-pane -L 5
+  unbind Right
+  bind -r Right resize-pane -R 5
+  unbind Down
+  bind -r Down resize-pane -D 5
+  unbind Up
+  bind -r Up resize-pane -U 5
 
-# Analagous with naked C-l which clears the terminal.
-bind-key C-l clear-history
+  # Fast toggle between current and last-used window (normally `prefix-l`).
+  bind C-\ last-window
+
+  # Intuitive window-splitting keys.
+  bind | split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
+  bind \ split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
+  bind - split-window -v -c '#{pane_current_path}' # Normally `prefix-"`.
+
+  # Analagous with naked C-l which clears the terminal.
+  bind C-l clear-history
 
 # }}}
 
