tmux: Improve windows on status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@
 
 # }}}
 
-# {{{ Windows
+# Windows {{{
 
   setw -g alternate-screen on   # Allow programs to use alternate screen.
 
@@ -39,7 +39,7 @@
   setw -g pane-base-index 1     # Number panes starting at 1.
 
   set -g set-titles on          # Set terminal title.
-  set -g set-titles-string "#S > #T"
+  set -g set-titles-string "[#S] #T"
 
   # Appearance {{{
 
@@ -70,8 +70,8 @@
 
   # Windows on status bar.
   setw -g window-status-separator ' '
-  setw -g window-status-style 'bg=brightblack,fg=default'
-  setw -g window-status-current-style 'bg=white,fg=black'
+  setw -g window-status-format '#[bg=brightblack,fg=blue] #I#{?window_flags,#{window_flags},} #[fg=white]#W '
+  setw -g window-status-current-format '#[bg=white,fg=brightred] #I#{?window_flags,#{window_flags},} #[fg=black]#W '
 
   # Commands.
   set -g message-style 'bg=#21252b,fg=white'
