tmux: Fix tmux bindings being misread

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,52 +82,52 @@
 # Bindings {{{
 
   # Set prefix to `Ctrl+\`.
-  unbind C-b
+  unbind 'C-b'
   set-option -g prefix 'C-\'
 
   # Reload config from file.
-  unbind r
-  bind r source-file ~/.tmux.conf \; display-message 'Config reloaded'
+  unbind 'r'
+  bind 'r' source-file ~/.tmux.conf \; display-message 'Config reloaded'
 
   # Open new/split panes with the path of the current pane.
-  unbind c
-  bind c new-window -c '#{pane_current_path}'
-  unbind %
+  unbind 'c'
+  bind 'c' new-window -c '#{pane_current_path}'
+  unbind '%'
   # Use '£' instead of '%', since it's next to '"'.
-  bind £ split-window -h -c '#{pane_current_path}'
+  bind '£' split-window -h -c '#{pane_current_path}'
   unbind '"'
   bind '"' split-window -v -c '#{pane_current_path}'
 
   # Vim-like key bindings for pane navigation (default uses cursor keys).
-  unbind h
-  bind h select-pane -L
-  unbind j
-  bind j select-pane -D
-  unbind k
-  bind k select-pane -U
-  unbind l # Normally used for last-window.
-  bind l select-pane -R
+  unbind 'h'
+  bind 'h' select-pane -L
+  unbind 'j'
+  bind 'j' select-pane -D
+  unbind 'k'
+  bind 'k' select-pane -U
+  unbind 'l' # Normally used for last-window.
+  bind 'l' select-pane -R
 
   # Resizing (mouse also works).
-  unbind Left
-  bind -r Left resize-pane -L 5
-  unbind Right
-  bind -r Right resize-pane -R 5
-  unbind Down
-  bind -r Down resize-pane -D 5
-  unbind Up
-  bind -r Up resize-pane -U 5
+  unbind 'Left'
+  bind -r 'Left' resize-pane -L 5
+  unbind 'Right'
+  bind -r 'Right' resize-pane -R 5
+  unbind 'Down'
+  bind -r 'Down' resize-pane -D 5
+  unbind 'Up'
+  bind -r 'Up' resize-pane -U 5
 
   # Fast toggle between current and last-used window (normally `prefix-l`).
-  bind C-\ last-window
+  bind 'C-\' last-window
 
   # Intuitive window-splitting keys.
-  bind | split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
-  bind \ split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
-  bind - split-window -v -c '#{pane_current_path}' # Normally `prefix-"`.
+  bind '|' split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
+  bind '\' split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
+  bind '-' split-window -v -c '#{pane_current_path}' # Normally `prefix-"`.
 
   # Analagous with naked C-l which clears the terminal.
-  bind C-l clear-history
+  bind 'C-l' clear-history
 
 # }}}
 
