tmux: Fix status-right clipping issues

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -67,6 +67,7 @@
 
   # Status right.
   set -g status-right "#[bg=colour8,fg=white] $USER@#h #[bg=#{?client_prefix,magenta,green},fg=black] %H:%M | %d/%m/%Y "
+  set -g status-right-length 50
 
   # Windows on status bar.
   setw -g window-status-separator ' '
