kitty: Improve splitting with binds like tmux

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -390,7 +390,7 @@ remember_window_size  yes
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts splits
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -966,7 +966,15 @@ allow_remote_control yes
 
 #:     map ctrl+f>2 set_font_size 20
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
+
+map ctrl+shift+\>shift+\ launch --cwd current --location vsplit
+map ctrl+shift+\>- launch --cwd current --location hsplit
+
+#map ctrl+shift+\>up resize-window --increment 1 --axis vertical
+#map ctrl+shift+\>down resize-window --increment -1 --axis vertical
+#map ctrl+shift+\>right resize-window --increment 1 --axis horizontal
+#map ctrl+shift+\>left resize-window --increment -1 --axis horizontal
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
