tmux: Move to modular config and improve mouse
Move to a modular config system.

Improve mouse control in alternate buffer applications that don't
support the mouse properly.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,136 +1,2 @@
-# General {{{
-
-  # Enable 256 colour support.
-  set -g default-terminal "tmux-256color"
-  set -ag terminal-overrides ',xterm-256color:Tc'
-
-  # Don't wait for escape sequences after seeing `Ctrl+\`.
-  set -s escape-time 10
-
-  # Enable focus events.
-  set -g focus-events on
-
-  # Enable mouse support.
-  #
-  # Mouse can be used to select panes, select windows (on the status bar) and
-  # resize panes.
-  set -g mouse on
-
-  # Enable xterm keys.
-  setw -g xterm-keys on
-
-  # Set history size limit.
-  set -g history-limit 4096
-
-  # Add ':' to the default list (' -_@') of word separators.
-  set -ag word-separators :
-
-# }}}
-
-# Windows {{{
-
-  setw -g alternate-screen on   # Allow programs to use alternate screen.
-
-  setw -g allow-rename on       # Allow programs to change window title.
-  setw -g automatic-rename off  # Don't manage window titles.
-
-  set -g renumber-windows on    # Automatically renumber windows.
-  set -g base-index 1           # Number windows starting at 1.
-  setw -g pane-base-index 1     # Number panes starting at 1.
-
-  set -g set-titles on          # Set terminal title.
-  set -g set-titles-string "[#S] #T"
-
-  # Appearance {{{
-
-    setw -g window-style 'bg=default,fg=default'
-    setw -g window-active-style 'bg=default,fg=default'
-
-    # Panes
-    setw -g pane-border-style 'fg=brightblack'
-    setw -g pane-active-border-style 'fg=brightblack'
-
-  # }}}
-
-# }}}
-
-# Status Bar {{{
-
-  set -g status on
-  set -g status-interval 15
-
-  set -g status-style 'bg=#21252b,fg=white'
-
-  # Status left.
-  set -g status-left '#[bg=#{?client_prefix,magenta,green},fg=black] #S #[bg=default,fg=default] '
-  set -g status-left-length 20
-
-  # Status right.
-  set -g status-right "#[bg=colour8,fg=white] $USER@#h #[bg=#{?client_prefix,magenta,green},fg=black] %H:%M | %d/%m/%Y "
-  set -g status-right-length 50
-
-  # Windows on status bar.
-  setw -g window-status-separator ' '
-  setw -g window-status-format '#[bg=brightblack,fg=blue] #I#{?window_flags,#{window_flags},} #[fg=white]#W '
-  setw -g window-status-current-format '#[bg=white,fg=brightred] #I#{?window_flags,#{window_flags},} #[fg=black]#W '
-
-  # Commands.
-  set -g message-style 'bg=#21252b,fg=white'
-  set -g message-command-style 'bg=#21252b,fg=magenta'
-
-# }}}
-
-# Bindings {{{
-
-  # Set prefix to `Ctrl+\`.
-  unbind 'C-b'
-  set-option -g prefix 'C-\'
-
-  # Reload config from file.
-  unbind 'r'
-  bind 'r' source-file ~/.tmux.conf \; display-message 'Config reloaded'
-
-  # Open new/split panes with the path of the current pane.
-  unbind 'c'
-  bind 'c' new-window -c '#{pane_current_path}'
-  unbind '%'
-  # Use '£' instead of '%', since it's next to '"'.
-  bind '£' split-window -h -c '#{pane_current_path}'
-  unbind '"'
-  bind '"' split-window -v -c '#{pane_current_path}'
-
-  # Vim-like key bindings for pane navigation (default uses cursor keys).
-  unbind 'h'
-  bind 'h' select-pane -L
-  unbind 'j'
-  bind 'j' select-pane -D
-  unbind 'k'
-  bind 'k' select-pane -U
-  unbind 'l' # Normally used for last-window.
-  bind 'l' select-pane -R
-
-  # Resizing (mouse also works).
-  unbind 'Left'
-  bind -r 'Left' resize-pane -L 5
-  unbind 'Right'
-  bind -r 'Right' resize-pane -R 5
-  unbind 'Down'
-  bind -r 'Down' resize-pane -D 5
-  unbind 'Up'
-  bind -r 'Up' resize-pane -U 5
-
-  # Fast toggle between current and last-used window (normally `prefix-l`).
-  bind 'C-\' last-window
-
-  # Intuitive window-splitting keys.
-  bind '|' split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
-  bind '\' split-window -h -c '#{pane_current_path}' # Normally `prefix-%`.
-  bind '-' split-window -v -c '#{pane_current_path}' # Normally `prefix-"`.
-
-  # Analagous with naked C-l which clears the terminal.
-  bind 'C-l' clear-history
-
-# }}}
-
-# Source local config.
-source-file -q ~/.tmux.conf.local
+# Initialise tmux.
+run '~/.tmux/init.sh'
