kitty: Add dropdown terminal wrapper for kitty
Use tdrop to create a wrapper shell program that uses kitty as if it
were a dropdown terminal.

This is combined with custom window behaviour and properties in KDE to
create the desired aesthetic, such as removing the titlebar but leaving
in window borders and custom colouring for thw window borders.

--- a/kitty/.config/kitty/kitty-drop.conf
+++ b/kitty/.config/kitty/kitty-drop.conf
@@ -1,13 +1,25 @@
 # Include regular kitty configuration.
 include kitty.conf
 
-# Hide window decorations.
+# Use a custom KDE application override here to hide the titlebar but leave the
+# window borders, instead of hiding window decorations here.
 hide_window_decorations no
 
 # Set specific window size.
 remember_window_size  no
-initial_window_width  150c
+initial_window_width  140c
 initial_window_height 40c
 
-# Slightly transparent.
-background_opacity 0.95
+# Background opacity.
+#background_opacity 0.95
+background_opacity 1
+
+# Only show one window in layout, we prefer using tmux anyway.
+enabled_layouts stack
+
+# Window padding.
+window_padding_width 4
+window_margin_width 0
+
+# Resize in steps the size of cells.
+resize_in_steps yes
