--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -39,7 +39,9 @@ url_style curly
 # Window {{{2
 
 # Use previous window size.
-remember_window_size  yes
+#remember_window_size  yes
+# Disable because it conflicts with tdrop-kitty.
+remember_window_size  no
 # Initial size if not previously set.
 initial_window_width  128c
 initial_window_height 40c
@@ -49,6 +51,11 @@ enabled_layouts splits
 
 # Draw only the minimum borders required.
 draw_minimal_borders yes
+
+# Resize in steps the same size as cells.
+#resize_in_steps yes
+# Disable because it breaks maximising the window.
+resize_in_steps no
 
 # 2}}}
 
@@ -68,8 +75,6 @@ sync_to_monitor yes
 enable_audio_bell no
 # Request window attention on bell, eg. highlight on taskbar.
 window_alert_on_bell yes
-
-
 
 # }}}
 
