kitty: Improve keybinds and tab bar

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -59,6 +59,35 @@ resize_in_steps no
 
 # 2}}}
 
+# Tab {{{2
+
+# Display tab bar at bottom when 2 or more tabs are present.
+tab_bar_edge     bottom
+tab_bar_min_tabs 2
+
+# Switch to the previous tab when a tab is closed.
+tab_switch_strategy previous
+
+# Display tab index with title.
+tab_title_template "{index}: {title}"
+
+# No margin to the left/right of the tab bar.
+tab_bar_margin_width 0.0
+
+# Display tabs in a continuous line.
+tab_bar_style powerline
+
+# TODO: Tab bar colour scheme.
+tab_bar_background      none
+active_tab_foreground   #000
+active_tab_background   #eee
+active_tab_font_style   bold-italic
+inactive_tab_foreground #444
+inactive_tab_background #999
+inactive_tab_font_style normal
+
+# 2}}}
+
 # }}}
 
 # General {{{
@@ -91,11 +120,51 @@ env TERM_PROGRAM=kitty
 
 # Keybinds {{{
 
+# Remove default keybinds.
+clear_all_shortcuts yes
+
 # Kitty modifier key combination.
 kitty_mod ctrl+shift
 
+# Clipboard.
+map     kitty_mod+c     copy_to_clipboard
+map     kitty_mod+v     paste_from_clipboard
+
+# Tabs.
+map     kitty_mod+t         new_tab
+map     kitty_mod+w         close_tab
+map     kitty_mod+left      previous_tab
+map     kitty_mod+right     next_tab
+map     kitty_mod+,         move_tab_backward
+map     kitty_mod+.         move_tab_forward
+map     kitty_mod+;         set_tab_title
+
+# Tab goto.
+map     kitty_mod+1     goto_tab 1
+map     kitty_mod+2     goto_tab 2
+map     kitty_mod+3     goto_tab 3
+map     kitty_mod+4     goto_tab 4
+map     kitty_mod+5     goto_tab 5
+map     kitty_mod+6     goto_tab 6
+map     kitty_mod+7     goto_tab 7
+map     kitty_mod+8     goto_tab 8
+map     kitty_mod+9     goto_tab 9
+
 # Horizontal and vertical splits.
-map    ctrl+shift+\>shift+\    launch --cwd current --location vsplit
-map    ctrl+shift+\>-          launch --cwd current --location hsplit
+map     kitty_mod+\>shift+\     launch --cwd current --location vsplit
+map     kitty_mod+\>-           launch --cwd current --location hsplit
+
+# Font size.
+map     kitty_mod+minus         change_font_size current -1.0
+map     kitty_mod+equal         change_font_size current +1.0
+map     kitty_mod+backspace     change_font_size current 0
+
+# OS Window.
+map     kitty_mod+f10   toggle_maximized
+map     kitty_mod+f11   toggle_fullscreen
+
+# Miscellanious.
+map     kitty_mod+u         kitten unicode_input
+map     kitty_mod+escape    kitty_shell window
 
 # }}}
