kitty: Replace keybinds and improve windows/tabs
Replace default keybinds with custom ones.

Improve colour scheme integration.
Improve window splitting and tab navigation.

Add tab bar with powerline style matching colour scheme.

--- a/kitty/.config/kitty/OneDark.conf
+++ b/kitty/.config/kitty/OneDark.conf
@@ -42,3 +42,14 @@ color15                 #3e4452
 
 # URL colour.
 url_color               #c678dd
+
+# Split border colours.
+active_border_color     #61afef
+inactive_border_color   #5c6370
+bell_border_color       #e5c07b
+
+# Tab bar colours.
+active_tab_foreground   #282c34
+active_tab_background   #abb2bf
+inactive_tab_foreground #abb2bf
+inactive_tab_background #4b5263
