--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -38,9 +38,7 @@ url_style curly
 
 # Window {{{2
 
-# Use previous window size.
-#remember_window_size  yes
-# Disable because it conflicts with tdrop-kitty.
+# Disable because it conflicts with kitty_dropdown.
 remember_window_size  no
 # Initial size if not previously set.
 initial_window_width  128c
@@ -52,8 +50,15 @@ enabled_layouts splits
 # Draw only the minimum borders required.
 draw_minimal_borders yes
 
-# Resize in steps the same size as cells.
-#resize_in_steps yes
+# Window padding.
+window_padding_width 4
+window_margin_width  0
+# No margin when there are no splits.
+single_window_margin_width 0
+
+# Centre the window, speading padding evenly.
+placement_strategy center
+
 # Disable because it breaks maximising the window.
 resize_in_steps no
 
@@ -68,22 +73,22 @@ tab_bar_min_tabs 2
 # Switch to the previous tab when a tab is closed.
 tab_switch_strategy previous
 
-# Display tab index with title.
-tab_title_template "{index}: {title}"
-
 # No margin to the left/right of the tab bar.
-tab_bar_margin_width 0.0
+tab_bar_margin_width 0
 
-# Display tabs in a continuous line.
+# Display tabs separated with a blank background space.
+#tab_bar_style fade
+#tab_title_template " {index}: {title} "
+#active_tab_title_template " {index}: {title} "
+#tab_fade 1
+
+# Display tabs separated in a powerline style.
 tab_bar_style powerline
+tab_title_template "{index}: {title}"
+#active_tab_title_template "{index}: {title}"
 
-# TODO: Tab bar colour scheme.
 tab_bar_background      none
-active_tab_foreground   #000
-active_tab_background   #eee
-active_tab_font_style   bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
+active_tab_font_style   bold
 inactive_tab_font_style normal
 
 # 2}}}
@@ -131,7 +136,7 @@ map     kitty_mod+c     copy_to_clipboard
 map     kitty_mod+v     paste_from_clipboard
 
 # Tabs.
-map     kitty_mod+t         new_tab
+map     kitty_mod+t         new_tab_with_cwd
 map     kitty_mod+w         close_tab
 map     kitty_mod+left      previous_tab
 map     kitty_mod+right     next_tab
@@ -140,23 +145,40 @@ map     kitty_mod+.         move_tab_forward
 map     kitty_mod+;         set_tab_title
 
 # Tab goto.
-map     kitty_mod+1     goto_tab 1
-map     kitty_mod+2     goto_tab 2
-map     kitty_mod+3     goto_tab 3
-map     kitty_mod+4     goto_tab 4
-map     kitty_mod+5     goto_tab 5
-map     kitty_mod+6     goto_tab 6
-map     kitty_mod+7     goto_tab 7
-map     kitty_mod+8     goto_tab 8
-map     kitty_mod+9     goto_tab 9
+map     alt+1     goto_tab 1
+map     alt+2     goto_tab 2
+map     alt+3     goto_tab 3
+map     alt+4     goto_tab 4
+map     alt+5     goto_tab 5
+map     alt+6     goto_tab 6
+map     alt+7     goto_tab 7
+map     alt+8     goto_tab 8
+map     alt+9     goto_tab 9
+
+# Resize splits.
+map     kitty_mod+r     start_resizing_window
 
 # Horizontal and vertical splits.
-map     kitty_mod+\>shift+\     launch --cwd current --location vsplit
-map     kitty_mod+\>-           launch --cwd current --location hsplit
+map     kitty_mod+\>shift+\     launch --type=window --cwd=current --location=vsplit
+map     kitty_mod+\>\           launch --type=window --cwd=current --location=vsplit
+map     kitty_mod+\>shift+-     launch --type=window --cwd=current --location=hsplit
+map     kitty_mod+\>-           launch --type=window --cwd=current --location=hsplit
+
+# Split navigation.
+map     alt+left    neighboring_window left
+map     alt+right   neighboring_window right
+map     alt+up      neighboring_window up
+map     alt+down    neighboring_window down
+
+# Split moving.
+map     shift+alt+left      move_window left
+map     shift+alt+right     move_window right
+map     shift+alt+up        move_window up
+map     shift+alt+down      move_window down
 
 # Font size.
-map     kitty_mod+minus         change_font_size current -1.0
-map     kitty_mod+equal         change_font_size current +1.0
+map     kitty_mod+minus         change_font_size current -0.5
+map     kitty_mod+equal         change_font_size current +0.5
 map     kitty_mod+backspace     change_font_size current 0
 
 # OS Window.
@@ -164,7 +186,7 @@ map     kitty_mod+f10   toggle_maximized
 map     kitty_mod+f11   toggle_fullscreen
 
 # Miscellanious.
-map     kitty_mod+u         kitten unicode_input
 map     kitty_mod+escape    kitty_shell window
+map     kitty_mod+u         kitten unicode_input
 
 # }}}
