kitty: Change tab navigation keybinds

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -135,15 +135,17 @@ kitty_mod ctrl+shift
 map     kitty_mod+c     copy_to_clipboard
 map     kitty_mod+v     paste_from_clipboard
 
-# Tabs.
+# Tab renaming.
+map     kitty_mod+;         set_tab_title
+# Tab open/close.
 map     kitty_mod+t         new_tab_with_cwd
 map     kitty_mod+w         close_tab
-map     kitty_mod+left      previous_tab
-map     kitty_mod+right     next_tab
-map     kitty_mod+,         move_tab_backward
-map     kitty_mod+.         move_tab_forward
-map     kitty_mod+;         set_tab_title
-
+# Tab navigation.
+map     ctrl+alt+left       previous_tab
+map     ctrl+alt+right      next_tab
+# Tab moving.
+map     kitty_mod+left      move_tab_backward
+map     kitty_mod+right     move_tab_forward
 # Tab goto.
 map     alt+1     goto_tab 1
 map     alt+2     goto_tab 2
@@ -156,25 +158,22 @@ map     alt+8     goto_tab 8
 map     alt+9     goto_tab 9
 
 # Resize splits.
-map     kitty_mod+r     start_resizing_window
-
+map     kitty_mod+r             start_resizing_window
 # Horizontal and vertical splits.
 map     kitty_mod+\>shift+\     launch --type=window --cwd=current --location=vsplit
 map     kitty_mod+\>\           launch --type=window --cwd=current --location=vsplit
 map     kitty_mod+\>shift+-     launch --type=window --cwd=current --location=hsplit
 map     kitty_mod+\>-           launch --type=window --cwd=current --location=hsplit
-
 # Split navigation.
-map     alt+left    neighboring_window left
-map     alt+right   neighboring_window right
-map     alt+up      neighboring_window up
-map     alt+down    neighboring_window down
-
+map     alt+left                neighboring_window left
+map     alt+right               neighboring_window right
+map     alt+up                  neighboring_window up
+map     alt+down                neighboring_window down
 # Split moving.
-map     shift+alt+left      move_window left
-map     shift+alt+right     move_window right
-map     shift+alt+up        move_window up
-map     shift+alt+down      move_window down
+map     shift+alt+left          move_window left
+map     shift+alt+right         move_window right
+map     shift+alt+up            move_window up
+map     shift+alt+down          move_window down
 
 # Font size.
 map     kitty_mod+minus         change_font_size current -0.5
