kitty: Trim inactive tab titles to 30 characters

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -84,8 +84,10 @@ tab_bar_margin_width 0
 
 # Display tabs separated in a powerline style.
 tab_bar_style powerline
-tab_title_template "{index}: {title}"
-#active_tab_title_template "{index}: {title}"
+active_tab_title_template "{index}: {title}"
+# Awkward method of obtaining string length, but it is required since there are
+# no builtins for the eval (ie. cannot use `len` function).
+tab_title_template "{index}: {title if title.rindex(title[-1]) + 1 <= 30 else title[:29] + '…'}"
 
 tab_bar_background      none
 active_tab_font_style   bold
