kitty: Experiment with input delay

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -104,6 +104,8 @@ scrollback_lines 2000
 
 # Delay (in milliseconds) between screen updates.
 repaint_delay 16
+# Delay (in milliseconds) before input from running program is processed.
+#input_delay 3
 # Sync screen updates to monitor refresh rate.
 sync_to_monitor yes
 
