vim: Set Lua runtime to LuaJIT for Coc

--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
     "sumneko-lua.enableNvimLuaDev": true,
-    "Lua.workspace.ignoreDir": ["nvim/tmp/"]
+    "Lua.workspace.ignoreDir": ["nvim/tmp/"],
+    "Lua.runtime.version": "LuaJIT"
 }
