kitty: Don't modify shell cursor

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,6 +27,9 @@ cursor_shape block
 # Cursor Blink Interval (0 disables blinking).
 cursor_blink_interval 0
 
+# Don't modify the cursor in shell prompt.
+shell_integration no-cursor
+
 # 2}}}
 
 # Mouse {{{2
