kitty: Update settings and tdrop

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,15 +27,17 @@ cursor_shape block
 # Cursor Blink Interval (0 disables blinking).
 cursor_blink_interval 0
 
-# Don't modify the cursor in shell prompt.
-shell_integration no-cursor
-
 # 2}}}
 
 # Mouse {{{2
 
 # Curly underline style for URLs.
 url_style curly
+
+# Modify the amount scrolled by the mouse wheel.
+wheel_scroll_multiplier 5.0
+# Modify the amount scrolled by the touchpad.
+touch_scroll_multiplier 3.0
 
 # 2}}}
 
@@ -120,6 +122,9 @@ window_alert_on_bell yes
 # }}}
 
 # Advanced {{{
+
+# Disable shell integration.
+shell_integration disabled
 
 # Enable kitty remote control, ie. `kitty @...`.
 allow_remote_control yes
