--- a/kitty/.config/kitty/kitty-drop.conf
+++ b/kitty/.config/kitty/kitty-drop.conf
@@ -1,6 +1,9 @@
 # Include regular kitty configuration.
 include kitty.conf
 
+# Set the watcher.
+watcher ~/.local/share/kitty_dropdown/watcher.py
+
 # Use a custom KDE application override here to hide the titlebar but leave the
 # window borders, instead of hiding window decorations here.
 hide_window_decorations no
