--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@ include OneDark.conf
 # Fonts {{{2
 
 # Font family.
-font_family         JetBrains Mono Regular Nerd Font Complete Mono
-bold_font           JetBrains Mono Bold Nerd Font Complete Mono
-italic_font         JetBrains Mono Italic Nerd Font Complete Mono
-bold_italic_font    JetBrains Mono Bold Italic Nerd Font Complete Mono
+font_family         JetBrainsMono Nerd Font
+bold_font           JetBrainsMono Nerd Font
+italic_font         JetBrainsMono Nerd Font
+bold_italic_font    JetBrainsMono Nerd Font
 
 # Font size.
 font_size 10.0
