kitty: Update theme

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # Appearance {{{
 
 # Include OneDark theme configuration.
-include OneDark.conf
+include themes/OneDark.conf
 
 # Fonts {{{2
 
@@ -81,20 +81,11 @@ tab_switch_strategy previous
 # No margin to the left/right of the tab bar.
 tab_bar_margin_width 0
 
-# Display tabs separated with a blank background space.
-#tab_bar_style fade
-#tab_title_template " {index}: {title} "
-#active_tab_title_template " {index}: {title} "
-#tab_fade 1
-
 # Display tabs separated in a powerline style.
 tab_bar_style powerline
+tab_title_template "{index}: {title if title.__len__() <= 30 else title[:29] + '…'}"
 active_tab_title_template "{index}: {title}"
-# Awkward method of obtaining string length, but it is required since there are
-# no builtins for the eval (ie. cannot use `len` function).
-tab_title_template "{index}: {title if title.rindex(title[-1]) + 1 <= 30 else title[:29] + '…'}"
 
-tab_bar_background      none
 active_tab_font_style   bold
 inactive_tab_font_style normal
 
@@ -201,3 +192,5 @@ map     kitty_mod+escape    kitty_shell window
 map     kitty_mod+u         kitten unicode_input
 
 # }}}
+
+# vim:ft=kitty
