kitty: Add more tab navigation keybinds

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -146,6 +146,8 @@ map     kitty_mod+w         close_tab
 # Tab navigation.
 map     ctrl+alt+left       previous_tab
 map     ctrl+alt+right      next_tab
+map     ctrl+shift+tab      previous_tab
+map     ctrl+tab            next_tab
 # Tab moving.
 map     kitty_mod+left      move_tab_backward
 map     kitty_mod+right     move_tab_forward
